test/wasm_test_suite.expected
==== core/elem.wast ====
Error: The type index 0 is not bound.
    ──➤  wasm-test-suite/core/elem.wast:1061:26
1059 │   (func (result i32) (i32.const 42))
1060 │   (func (export "call_in_table") (param i32) (result i32)
1061 │     (call_indirect (type 0) (local.get 0)))
     ·                          ^
1062 │   (elem (table 0) (offset (i32.add (i32.const 1) (i32.const 2))) funcref (ref.func 0))
1063 │ )
==== core/exceptions/tag.wast ====
Validation should have failed (non-empty tag result type): (tag (result i32))
Validation should have failed (non-empty tag result type):
  (import "" "" (tag (result i32)))
Validation should have failed (non-empty tag result type): (tag (result i32))
Validation should have failed (non-empty tag result type):
  (import "" "" (tag (result i32)))
==== core/func.wast ====
Fatal error: exception File "src/lib-wasm/text_to_binary.ml", line 722, characters 28-34: Assertion failed
==== core/stack.wast ====
Fatal error: exception Invalid_argument("index out of bounds")
